tests/snapshots/golden__golden_cases@errors__index-out-of-bounds.shk.snap
---
source: tests/golden.rs
expression: rendered
input_file: tests/cases/errors/index-out-of-bounds.shk
---
ERROR: IndexError: Index 100 is out of bounds
  --> at line 2, column 1
