tests/snapshots/golden__golden_cases@errors__parse-unexpected-token.shk.snap
---
source: tests/golden.rs
expression: rendered
input_file: tests/cases/errors/parse-unexpected-token.shk
---
ERROR: Parsing failed: Unexpected token ')' at line 1, column 7. Expected: expression
