tests/snapshots/golden__golden_cases@errors__parse-unterminated-string.shk.snap
---
source: tests/golden.rs
expression: rendered
input_file: tests/cases/errors/parse-unterminated-string.shk
---
ERROR: Parsing failed: Unterminated string at line 1, column 12
