tests/snapshots/golden__golden_cases@errors__undefined-variable.shk.snap
---
source: tests/golden.rs
expression: rendered
input_file: tests/cases/errors/undefined-variable.shk
---
ERROR: UndefinedVariable: Variable 'definitely-not-defined-anywhere' is not defined
  --> at line 1, column 1
